--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -44,6 +44,48 @@
         <%= link_to "More about Love Story"%>
       </td>
     </tr>
+    <tr>
+      <td>
+        Love story
+      </td>
+      <td>
+        Country
+      </td>
+      <td>
+        02/21/2007
+      </td>
+      <td>
+        <%= link_to "More about Love Story"%>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Love story
+      </td>
+      <td>
+        Country
+      </td>
+      <td>
+        02/21/2007
+      </td>
+      <td>
+        <%= link_to "More about Love Story"%>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        Love story
+      </td>
+      <td>
+        Country
+      </td>
+      <td>
+        02/21/2007
+      </td>
+      <td>
+        <%= link_to "More about Love Story"%>
+      </td>
+    </tr>
     <% @musics.each do |music| %>
       <tr>
         <td>
@@ -62,4 +104,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Add new music', new_music_path, class: 'btn btn-primary' %>
+<%= link_to 'Add new music', new_music_path, class: 'btn btn-primary', id: "add_music" %>
