--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -104,4 +104,4 @@
     <% end %>
   </tbody>
 </table>
-<%= link_to 'Add new music', new_music_path, class: 'btn btn-primary', id: "add_music" %>
+<%= link_to 'Add new music', new_music_path, class: 'link_button', id: "add_music" %>
