--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -13,6 +13,6 @@
   <%= text_field :music, 'singer', class: 'form-control' %>
   <br/>
   <%= submit_tag 'Save Changes', class: 'btn btn-primary' %>
-  <%= link_to 'Cancel', musics_path, class: 'btn btn-secondary' %>
+  <%= link_to 'Cancel', musics_path, class: 'link_button' %>
 <% end %>
 
