--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -22,7 +22,7 @@
 </p>
 
 <div class="row">
-  <%= link_to 'Edit', edit_music_path(@music), class: 'btn btn-primary col-2' %>
-  <%= link_to 'Delete', music_path(@music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'btn btn-danger col-2' %>
-  <%= link_to 'Back to music list', musics_path, class: 'btn btn-primary col-2' %>
+  <%= link_to 'Edit', edit_music_path(@music), class: 'link_button', id: 'edit_button' %>
+  <%= link_to 'Delete', music_path(@music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'link_button' %>
+  <%= link_to 'Back to music list', musics_path, class: 'link_button', id: 'back_button' %>
 </div>
