--- a/app/views/musics/new.html.erb
+++ b/app/views/musics/new.html.erb
@@ -4,7 +4,7 @@
   <%= label :music, :title, 'Title', class: 'col-form-label' %>
   <%= text_field :music, :title, class: 'form-control' %>
   <%= label :music, :category, 'Category', class: 'col-form-label' %>
-  <%= select :music, :category, ['Rock', 'Country', 'Pop', 'Blues', 'Classical', 'Jazz'], {}, {class: 'form-control col-1'} %>
+  <%= select :music, :category, ['rock', 'country', 'pop', 'blues', 'classical', 'jazz'], {}, {class: 'form-control col-1'} %>
   <%= label :music, :description, 'Description', class: 'col-form-label' %>
   <%= text_field :music, 'description', class: 'form-control' %>
   <%= label :music, :release_date, 'Released On', class: 'col-form-label' %>
