--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -185,3 +185,15 @@
   form #submit {
     margin-left: 150px;
   }
+
+  li {
+    font-size: 3vh;
+    margin-top: 10px;
+  }
+  em {
+    text-decoration: underline;
+    color: coral;
+  }
+  #description {
+    font-size: 2.7vh;
+  }
