--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,25 @@
 <html>
   <head>
     <title>Musiclub</title>
-    <link rel="stylesheet" href="/stylesheets/general.css">
+
     <%= stylesheet_link_tag 'application', 'media' => 'all' %>
     <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary text-white mb-3">
-      <h1 class="title">Musiclub</h1>
+      <h1 id="title">Musiclub</h1>
+      <div id="curr_user">
+        <img src="/images/OIP.jpg" />
+        <%= link_to 'Current User', '#' %>
+      </div>
+
+      <div id="my_lib"><%= link_to 'My Library', '#' %></div>
+      
+      <div id="add_music"><%= link_to 'New music', new_music_path %></div>
+      <div id="logout"><%= link_to 'Log Out', '#' %></div>
+      
+      
     </nav>
     <div class="container">
       <%# Render "flash" messages in our application. This loads _flash.erb %>
