front-end finished except login, payment page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,10 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary text-white mb-3">
-      <h1 id="title">Musiclub</h1>
+      <%= link_to root_path do %>
+        <h1 id="title">Musiclub</h1>
+      <% end %>
+       
       <div id="curr_user">
         <img src="/images/OIP.jpg" />
         <%= link_to 'Current User', '#' %>
