--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -64,7 +64,7 @@
     justify-content: center;
     justify-items: center;
   }
-  .link_button {
+  .link_button, .library_link_button {
     text-align: center;
     background: lightsalmon;
     font-size: 2.5vh;
@@ -75,6 +75,9 @@
     height: 30px;
     align-items: center;
     display: grid;
+  }
+  .library_link_button {
+    width: 30vh;
   }
   .small_link_button {
     text-align: center;
@@ -105,18 +108,14 @@
   a {
     background: transparent;
     color: maroon;
-    text-decoration: underline;
+    text-decoration: none;
     font-weight: bold;
   }
   h1 {
     margin: 0 0 1em;
     padding: 10px;
-    /*background-color: orange;*/
     color: white;
-    /*bottom: 4px solid gold;*/
     font-size: 2em;
-    
-    
   }
   nav {
     background-color: orange;
@@ -159,6 +158,45 @@
   }
   #logout {
     grid-area: logout;
+  }
+
+  #lib_header1, #lib_header2 {
+    text-align: center;
+  }
+  #all_musics {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 50px;
+  }
+
+  #remove_button {
+    background-color: red;
+    color: white;
+  }
+
+  #download_button {
+    background-color: green;
+    color: white;
+  }
+  .music {
+    flex: 0 0 24%;
+    line-height: 30px;
+    margin-right: calc(4% / 3);
+    margin-bottom: 50px;
+  }
+  .music:nth-child(4n) {
+    margin-right: 0;
+  }
+  .music:last-child {
+    margin-right: auto;
+  }
+  .music img {
+    height: 50%;
+    width: 50%;
+  }
+  #remove_music {
+    width: 30vh;
   }
   h1 a {
     text-decoration: none;
