--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-primary text-white mb-3">
-      <%= link_to root_path do %>
+      <%= link_to musics_path do %>
         <h1 id="title">Musiclub</h1>
       <% end %>
        
@@ -22,10 +22,16 @@
         <% end %>
       </div>
 
-      <div id="my_lib"><%= link_to 'My Library', '#' %></div>
-      
-      <div id="add_music"><%= link_to 'New music', new_music_path %></div>
-      <div id="logout"><%= link_to 'Log Out', '/logout', method:'delete' %></div>
+      <% if !@current_user.nil?%>
+        <div id="home"><%= link_to 'Home', musics_path %></div>
+
+        <div id="my_lib"><%= link_to 'My Library', download_index_path %></div>
+        <div id="my_favorite"><%= link_to 'My Favorite', favorite_index_path %></div>
+
+        
+        <div id="add_music"><%= link_to 'New music', new_music_path %></div>
+        <div id="logout"><%= link_to 'Log Out', '/logout', method:'delete' %></div>
+      <% end %>
       
       
     </nav>
