--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -50,6 +50,8 @@
         <td id="operations">
           <%= link_to 'Edit', edit_music_path(music), class: 'small_link_button', id: 'edit_button' %>
           <%= link_to 'Delete', music_path(music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'small_link_button' %>
+          <%= link_to 'Download', download_music_path(music), class: 'small_link_button', id: 'download_button' %>
+          <%= link_to 'Favorite', favorite_music_path(music), class: 'small_link_button', id: 'favorite_button' %>
         </td>
       </tr>
     <% end %>
