--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -38,8 +38,12 @@
     display: flex;
   }
   table#musics {
-    margin-top: 15px;
     margin-bottom: 15px;
+  }
+  .scroll-box {
+    width: 100%;
+    max-height: 500px;
+    overflow: scroll;
   }
   #create_music_form,
   #edit_music_form, #login_form, #payment_method_form {
@@ -164,9 +168,9 @@
     background-color: orange;
     border-bottom: 4px solid gold;
     display: grid;
-    grid-template-columns: 15% 15% 40% 10% 10% 10%;
+    grid-template-columns: 15% 15% 15% 15% 20% 10% 10%;
     grid-template-areas: 
-      "title curr_user . my_lib add_music logout";
+      "title curr_user home my_lib my_favorite add_music logout";
     height: 11vh;
   }
 
@@ -190,7 +194,13 @@
   #add_music {
     grid-area: add_music;
   }
-  #add_music a, #my_lib a, #logout a, #curr_user a {
+  #my_favorite {
+    grid-area: my_favorite;
+  }
+  #home {
+    grid-area: home;
+  }
+  #add_music a, #my_lib a, #logout a, #curr_user a, #my_favorite a, #home a {
     color: white;
   }
   #curr_user a {
@@ -343,3 +353,56 @@
   #description {
     font-size: 2.7vh;
   }
+  #categories_submit {
+    cursor: pointer;
+    border: none;
+    background-color: darkorange;
+    font-weight: bold;
+  }
+  .checkbox {
+    display: inline-flex;
+    cursor: pointer;
+    position: relative;
+  }
+
+  .checkbox label {
+    color: #34495E;
+    padding: 0.5rem 0.25rem;
+    line-height: 15px; 
+    margin-top: 0px; 
+    font-size: 2.9vh;
+  }
+
+  .checkbox > input {
+    height: 20px;
+    width: 20px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    -o-appearance: none;
+    appearance: none;
+    border: 1px solid #34495E;
+    border-radius: 4px;
+    outline: none;
+    transition-duration: 0.3s;
+    background-color: orange;
+    cursor: pointer;
+  }
+
+.checkbox > input:checked {
+    border: 1px solid orange;
+    background-color: #34495E;
+}
+
+.checkbox > input:checked + label::before {
+    content: '\2713';
+    display: block;
+    text-align: center;
+    color: orange;
+    position: absolute;
+    left: 0.7rem;
+    top: 0.2rem;
+}
+
+.checkbox > input:active {
+    border: 2px solid #34495E;
+}
