--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -2,58 +2,58 @@
 
 <%= form_tag musics_path, method: :get, id: 'categories_form' do %>
   <%= hidden_field_tag 'sort_by', @sort_by %>
-  Include:
   <% @all_categories.each do |category| %>
-    <div class="form-check  form-check-inline">
-      <%= label_tag "categories[#{category}]", category, class: 'form-check-label' %>
+    <div class="checkbox">     
       <%= check_box_tag "categories[#{category}]", '1', (@categories_to_show_hash.include?(category)),
         class: 'form-check-input' %>
+      <%= label_tag "categories[#{category}]", category, class: 'form-check-label' %>
     </div>
   <% end %>
-  <%= submit_tag 'Refresh', id: 'categories_submit', class: 'btn btn-primary' %>
+  <%= submit_tag 'Refresh', id: 'categories_submit', class: 'small_link_button' %>
 <% end %>
-
-<table class="table table-striped col-md-12" id="musics">
-  <thead>
-    <tr>
-      <th>
-        <%= link_to 'Music Title', musics_path({sort_by: 'title', categories: @categories_to_show_hash}),
+<div class="scroll-box">
+  <table class="table table-striped col-md-12" id="musics">
+    <thead>
+      <tr>
+        <th>
+          <%= link_to 'Music Title', musics_path({sort_by: 'title', categories: @categories_to_show_hash}),
                       id: 'title_header', class: ('bg-warning hilite' if @sort_by == 'title') %>
-      </th>
-      <th>Category</th>
-      <th>
-       Singer
-      </th>
-      <th>
-        <%= link_to 'Release Date',
+        </th>
+        <th>Category</th>
+        <th>
+        Singer
+        </th>
+        <th>
+          <%= link_to 'Release Date',
               musics_path({sort_by: 'release_date', categories: @categories_to_show_hash}),
               id: 'release_date_header', class: ('bg-warning hilite' if @sort_by == 'release_date') %>
-      </th>
-      <th>Operations</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @musics.each do |music| %>
-      <tr>
-        <td>
-          <%= link_to "#{music.title}", music_path(music) %>
-        </td>
-        <td>
-          <%= music.category %>
-        </td>
-        <td>
-          <%= music.singer %>
-        </td>
-        <td>
-          <%= music.release_date %>
-        </td>
-        <td id="operations">
-          <%= link_to 'Edit', edit_music_path(music), class: 'small_link_button', id: 'edit_button' %>
-          <%= link_to 'Delete', music_path(music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'small_link_button' %>
-          <%= link_to 'Download', download_music_path(music), class: 'small_link_button', id: 'download_button' %>
-          <%= link_to 'Favorite', favorite_music_path(music), class: 'small_link_button', id: 'favorite_button' %>
-        </td>
+        </th>
+        <th>Operations</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @musics.each do |music| %>
+        <tr>
+          <td>
+            <%= link_to "#{music.title}", music_path(music) %>
+          </td>
+          <td>
+            <%= music.category %>
+          </td>
+          <td>
+            <%= music.singer %>
+          </td>
+          <td>
+            <%= music.release_date %>
+          </td>
+          <td id="operations">
+            <%= link_to 'Edit', edit_music_path(music), class: 'small_link_button', id: 'edit_button' %>
+            <%= link_to 'Delete', music_path(music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'small_link_button' %>
+            <%= link_to 'Download', download_music_path(music), class: 'small_link_button', id: 'download_button' %>
+            <%= link_to 'Favorite', favorite_music_path(music), class: 'small_link_button', id: 'favorite_button' %>
+          </td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
