--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -52,8 +52,19 @@
               <%= link_to 'Edit', edit_music_path(music), class: 'small_link_button', id: 'edit_button' %>
               <%= link_to 'Delete', music_path(music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'small_link_button' %>
             <% else %>
-              <%= link_to 'Download', download_music_path(music), class: 'small_link_button', id: 'download_button' %>
-              <%= link_to 'Favorite', favorite_music_path(music), class: 'small_link_button', id: 'favorite_button' %>
+
+              <% if !@current_user.musics_download.include? music %>
+                <%= link_to 'Download', download_music_path(music), class: 'small_link_button', id: 'download_button' %>
+              <% else %>
+                <%= link_to 'Download', '#', class: 'small_link_button', id: 'download_invalid_button' %>
+              <% end %>
+
+              <% if !@current_user.musics_favorite.include? music %>
+                <%= link_to 'Favorite', favorite_music_path(music), class: 'small_link_button', id: 'favorite_button' %>
+              <% else %>
+                <%= link_to 'Favorite', '#', class: 'small_link_button', id: 'favorite_invalid_button' %>
+              <% end %>
+            
             <% end %>
 
           </td>
