layout and picture

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
           <% if @current_user.admin %>
             <img src="/images/admin.png" />
           <% else %>
-            <img src="/images/OIP.jpg" />
+            <img src="/images/user.png" />
           <% end %>
           <%= link_to @current_user.name, '#' %>
         <% else %>
