--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,6 +28,10 @@
     color: maroon;
     font-size: 2em;
   }
+  th {
+    font-size: medium;
+    background-color:#fcb;
+  }
   main#main {
     margin-left: 15px;
     margin-right: 15px;
@@ -114,7 +118,7 @@
   .link_button, .library_link_button {
     text-align: center;
     background: lightsalmon;
-    font-size: 2.5vh;
+    font-size: medium;
     border-radius: 1.5vh;
     width: 50vh;
     margin-top: 10px;
@@ -129,7 +133,7 @@
   .small_link_button {
     text-align: center;
     background: lightsalmon;
-    font-size: 2.5vh;
+    font-size: medium;
     border-radius: 1.5vh;
     height: 30px;
     align-items: center;
@@ -200,10 +204,12 @@
   #home {
     grid-area: home;
   }
-  #add_music a, #my_lib a, #logout a, #curr_user a, #my_favorite a, #home a {
+  #add_music a, #my_lib a, #logout a, #my_favorite a, #home a {
     color: white;
+    font-size: large;
   }
   #curr_user a {
+    color: black;
     text-decoration: none;
   }
   #my_lib{
@@ -352,7 +358,7 @@
   }
 
   li {
-    font-size: 3vh;
+    font-size: large;
     margin-top: 10px;
   }
   em {
@@ -360,7 +366,7 @@
     color: coral;
   }
   #description {
-    font-size: 2.7vh;
+    font-size: large;
   }
   #categories_submit {
     cursor: pointer;
@@ -379,7 +385,7 @@
     padding: 0.5rem 0.25rem;
     line-height: 15px; 
     margin-top: 0px; 
-    font-size: 2.9vh;
+    font-size: large;
   }
 
   .checkbox > input {
