--- a/app/views/favorite_cart/index.html.erb
+++ b/app/views/favorite_cart/index.html.erb
@@ -1,5 +1,5 @@
-<h2 id="lib_header1">Current User's Favorite List</h2> 
-<h3 id="lib_header2">Download or manage your chosen titles below</h3>
+<h2 id="lib_header1">Your Favorite List</h2> 
+<h3 id="lib_header2">Download or manage your music below</h3>
 
 
 <div id="all_musics">
@@ -7,7 +7,7 @@
     <% @favorite_musics.each do |music| %>
 
         <div class="music">
-            <img src="/images/music_icon.png" />
+            <%= link_to image_tag (musicpic(music.singer)) %>
             <br/>
             <%= link_to "#{music.title}", music_path(music) %>
             <br/>
