--- a/app/views/favorite_cart/index.html.erb
+++ b/app/views/favorite_cart/index.html.erb
@@ -15,7 +15,12 @@
             <br/>
             <%= music.release_date %>
             <br/>
-            <%= link_to 'Download', download_music_path(music), class: 'library_link_button', id: 'download_button' %>
+              <% if !@current_user.musics_download.include? music %>
+                <%= link_to 'Download', download_music_path(music), class: 'library_link_button', id: 'download_button' %>
+              <% else %>
+                <%= link_to 'Download', '#', class: 'library_link_button', id: 'download_invalid_button' %>
+              <% end %>
+              
             <%= link_to 'Remove', favorite_remove_music_path(music), class: 'library_link_button', id: 'remove_button' %>
             <%= link_to 'Back to Musiclub', musics_path, class: 'library_link_button', id: 'back_button' %>
         </div>
