--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -55,7 +55,7 @@
             <% else %>
 
               <% if !@current_user.musics_download.include? music %>
-                <%= link_to 'Download', payment_path(music), class: 'small_link_button', id: 'download_button' %>
+                <%= link_to 'Download', payment_index_path(music), class: 'small_link_button', id: 'download_button' %>
               <% else %>
                 <%= link_to 'Download', '#', class: 'small_link_button', id: 'download_invalid_button' %>
               <% end %>
