--- a/app/views/accounts/login.html.erb
+++ b/app/views/accounts/login.html.erb
@@ -8,3 +8,8 @@
   <br/>
   <%= submit_tag 'Login', class: 'btn btn-primary' %>
 <% end %>
+
+<div id="sign_up">
+  <h3 id="signup_text">Don't have an account?</h3>
+  <%= link_to 'Sign up', "/signup", id: "signup_button" %>
+</div>
