--- a/app/views/favorite_cart/index.html.erb
+++ b/app/views/favorite_cart/index.html.erb
@@ -1,6 +1,9 @@
 <h2 id="lib_header1">Your Favorite List</h2> 
 <h3 id="lib_header2">Download or manage your music below</h3>
-
+<form class="search_bar" id="search_bar1" action="">
+    <input type="text" name="search">
+    <button type="submit"><i class="fa fa-search"></i></button>
+</form>
 
 <div id="all_musics">
 
