--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,4 +1,11 @@
-<h2>All Musics</h2>
+<div id="search_section">
+  <h2>All Musics</h2>
+
+  <form class="search_bar" action="">
+    <input type="text" name="search">
+    <button type="submit"><i class="fa fa-search"></i></button>
+  </form>
+</div>
 
 <%= form_tag musics_path, method: :get, id: 'categories_form' do %>
   <%= hidden_field_tag 'sort_by', @sort_by %>
