--- a/app/views/favorite_cart/index.html.erb
+++ b/app/views/favorite_cart/index.html.erb
@@ -23,7 +23,8 @@
               <% else %>
                 <%= link_to 'Download', '#', class: 'library_link_button', id: 'download_invalid_button' %>
               <% end %>
-              
+            
+            <%= link_to 'Comment', comment_index_path(music), class: 'library_link_button', id: 'comment_button' %> 
             <%= link_to 'Remove', favorite_remove_music_path(music), class: 'library_link_button', id: 'remove_button' %>
             <%= link_to 'Back to Musiclub', musics_path, class: 'library_link_button', id: 'back_button' %>
         </div>
