--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -72,6 +72,8 @@
               <% else %>
                 <%= link_to 'Favorite', '#', class: 'small_link_button', id: 'favorite_invalid_button' %>
               <% end %>
+
+              <%= link_to 'Comment', comment_index_path(music), class: 'small_link_button', id: 'comment_button' %> 
             
             <% end %>
 
