admin manages comments

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
 
         <% if @current_user.admin %>
           <div id="add_music"><%= link_to 'New music', new_music_path %></div>
+          <div id="my_favorite"><%= link_to 'Manage comments', comment_manage_path %></div>
           <div id="logout"><%= link_to 'Log Out', '/logout', method:'delete' %></div>
         <% else %>
           <div id="my_lib"><%= link_to 'My Library', download_index_path %></div>
