--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -39,13 +39,14 @@
 
 
 <div class="row">
-  <%= link_to 'Comment', comment_index_path(@music), class: 'link_button', id: 'comment_button' %> 
 
   <% if @current_user.admin %>
+    <%= link_to 'Manage comments', comment_manage_path, class: 'link_button', id: 'comment_button' %> 
     <%= link_to 'Edit', edit_music_path(@music), class: 'link_button', id: 'edit_button' %>
     <%= link_to 'Delete', music_path(@music), 'data-method': 'delete', 'data-confirm': 'Are you sure?', class: 'link_button' %>
-  <% else %>
 
+  <% else %>
+    <%= link_to 'Comment', comment_index_path(@music), class: 'link_button', id: 'comment_button' %> 
     <% if !@current_user.musics_download.include? @music %>
       <%= link_to 'Download', download_music_path(@music), class: 'link_button', id: 'download_button' %>
     <% else %>
