Add input tips for payment page

--- a/app/views/musics/show.html.erb
+++ b/app/views/musics/show.html.erb
@@ -31,7 +31,7 @@
         </div>
     <% end %>
 <% else %>
-    <div id="comments"> Nil </div>
+    <div id="comments" style="color:red"> <b><i> No comments have been added. </i></b></div>
 <% end %>
 
 </div>
