--- a/app/views/payment/index.html.erb
+++ b/app/views/payment/index.html.erb
@@ -1,11 +1,11 @@
 <h2 id="payment_method_title">Payment Methods</h2>
 
 <%= form_tag '/create_payment', class: 'form', id: "payment_method_form" do %>
-  <%= label :payment, :card_number, 'Card Number', class: 'col-form-label' %>
+  <%= label :payment, :card_number, 'Card Number(16 digits)', class: 'col-form-label' %>
   <%= text_field :payment, :card_number, class: 'form-control' %>
-  <%= label :payment, :expiration_date, 'Expiration Date', class: 'col-form-label' %>
+  <%= label :payment, :expiration_date, 'Expiration Date(xx/xxxx--month/year)', class: 'col-form-label' %>
   <%= text_field :payment, :expiration_date, class: 'form-control' %>
-  <%= label :payment, :cvv, 'CVV', class: 'col-form-label' %>
+  <%= label :payment, :cvv, 'CVV(3 digits)', class: 'col-form-label' %>
   <%= text_field :payment, :cvv, class: 'form-control' %>
   <%= label :payment, :holder_name, "Card Holder's Name", class: 'col-form-label' %>
   <%= text_field :payment, :holder_name, class: 'form-control' %>
