Add search buttom action

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -1,7 +1,7 @@
 <div id="search_section">
   <h2>All Musics</h2>
 
-  <form class="search_bar" action="">
+  <form class="search_bar" action="music_search">
     <input type="text" name="search">
     <button type="submit"><i class="fa fa-search"></i></button>
   </form>
