Add sign up feature.

--- a/app/views/accounts/signup.html.erb
+++ b/app/views/accounts/signup.html.erb
@@ -1,6 +1,6 @@
 <h2 id="login_title">Musiclub User Sign-up</h2>
 
-<%= form_tag '', class: 'form', id: "login_form" do %>
+<%= form_tag '/create_account', class: 'form', id: "login_form" do %>
   <%= label :user, :email, 'Email address', class: 'col-form-label' %>
   <%= email_field :user, :email, class: 'form-control' %>
   <%= label :password, 'Password', class: 'col-form-label' %>
