add placeholder for search

--- a/app/views/musics/index.html.erb
+++ b/app/views/musics/index.html.erb
@@ -2,7 +2,7 @@
   <h2>All Musics</h2>
 
   <form class="search_bar" action="music_search">
-    <input type="text" name="search">
+    <input type="text" name="search" placeholder="Enter music title">
     <button type="submit" name="search button">
       <i class="fa fa-search"></i>
       <%# Search %>
