--- a/app/views/musics/edit.html.erb
+++ b/app/views/musics/edit.html.erb
@@ -11,6 +11,6 @@
   <%= label :music, :singer, 'Singer', class: 'col-form-label' %>
   <%= text_field :music, 'singer', class: 'form-control' %>
   <br/>
-  <%= submit_tag 'Update Music Info', class: 'btn btn-primary' %>
+  <%= submit_tag 'Update Music Info', class: 'btn btn-primary', id: 'update_info' %>
   <%= link_to 'Cancel', musics_path, class: 'link_button' %>
 <% end %>
