download to local

--- a/app/views/favorite_cart/index.html.erb
+++ b/app/views/favorite_cart/index.html.erb
@@ -26,7 +26,7 @@
             
             <%= link_to 'Comment', comment_index_path(music), class: 'library_link_button', id: 'comment_button' %> 
             <%= link_to 'Remove', favorite_remove_music_path(music), class: 'library_link_button', id: 'remove_button' %>
-            <%= link_to 'Back to Musiclub', musics_path, class: 'library_link_button', id: 'back_button' %>
+            <%# <%= link_to 'Back to Musiclub', musics_path, class: 'library_link_button', id: 'back_button' %>
         </div>
 
 
